# mqtt

./: .gitignore  CMakeLists.txt  CMakePresets.json  ElegantLog.hpp  Makefile  README.md  calculate.hpp  frame_comm.hpp  main.cpp  publisher  publisher.cpp  publisher.hpp  serial.hpp  subscriber.hpp  sysconfig.hpp
result_dir/paho.mqtt.c_result/lib/: libpaho-mqtt3a.so.1.3  libpaho-mqtt3as.so.1.3  libpaho-mqtt3c.so.1.3  libpaho-mqtt3cs.so.1.3
result_dir/paho.mqtt.cpp_result/lib/: libpaho-mqttpp3.so.1  libpaho-mqttpp3.so.1.3.2
result_dir/paho.mqtt.cpp_result/lib/cmake/PahoMqttCpp/: PahoMqttCppConfig.cmake  PahoMqttCppConfigVersion.cmake  PahoMqttCppTargets-noconfig.cmake
result_dir/ssl_result/lib/: libcrypto.so.1.1  libssl.so.1.1
result_dir/ssl_result/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
test/: a.out  api_log.hpp  sensortofloat  sensortofloat.cpp  ssl_pusher.cpp  subscriber  subscriber.cpp  test_log  test_log.cpp  test_log.i  testmain.cpp  testqjserial  testserial
